# cleanfeed

./: .gitignore  JOURNEY.md  MANIFEST.md  README.md  TODOS.md  app.py  benchmark_clearvoice_numpy.py  benchmark_denoisers.py  benchmark_pipeline.py  cli.py  engine.py  processor.py  pyproject.toml  setup.sh  test_studio_character.py  test_tube_sweep.py
cleanfeed/: __init__.py  app.py  cli.py  engine.py  processor.py
demo/: RECORDING_GUIDE.md
docs/: architecture.md  benchmarks.md  system-architecture.html  tasks.md
tests/: conftest.py  test_compat.py  test_engine.py  test_processor.py  test_public_api.py
